# ResumeGen

./: .gitignore  LICENSE  README.md  config.toml  main.py  pyproject.toml
ResumeGen/: cover.py  resume.py
ResumeGen/LLMs/: gpt.py
templates/: FunctionSpec.json  cover_template.tex.j2  resume_template.tex.j2  schema.json
